<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-3dp"
        android:layout_marginRight="-3dp"
        android:layout_marginBottom="629dp"
        android:text="@string/simple_calci"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:layout_marginBottom="547dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_the_first_number"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:layout_marginBottom="476dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_the_second_number"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:textColorHint="#757575" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="350dp"
        android:text="@string/_0"
        android:textSize="40sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="203dp" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="237dp"
        android:onClick="doAdd"
        android:text="@string/add"
        android:layout_alignParentRight="true"
        android:layout_marginRight="274dp"
        tools:ignore="UsingOnClickInXml" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="233dp"
        android:onClick="doSub"
        android:text="@string/sub"
        android:layout_alignParentRight="true"
        android:layout_marginRight="68dp"
        tools:ignore="UsingOnClickInXml" />
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="115dp"
        android:onClick="doMul"
        android:text="@string/mul"
        android:layout_marginRight="277dp"
        android:layout_alignParentRight="true"
        tools:ignore="UsingOnClickInXml" />
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="104dp"
        android:onClick="doDiv"
        android:text="@string/div"
        android:layout_alignParentRight="true"
        android:layout_marginRight="63dp"
        tools:ignore="UsingOnClickInXml" />
</RelativeLayout>